Fixed subtle issue that caused last miller column to wrap. Closes #98.

--- a/mink-plugin/style.css
+++ b/mink-plugin/style.css
@@ -71,7 +71,7 @@
 
 
 #drilldownBox {border: 1px solid #999; z-index: 3;  padding: 2px; position: absolute; z-index: 1; left: 125px; background-color: white; font-family: Arial, sans-serif;}
-#drilldownBox ul {list-style-type: none; width: 150px; float: left; margin: 0; padding: 0;}
+#drilldownBox ul {list-style-type: none; width: 145px; float: left; margin: 0; padding: 0;}
 #drilldownBox ul li {list-style-type: none; padding: 0; margin: 0;}
 #drilldownBox ul li:hover {background-color: #ddddff; cursor: pointer;}
 #drilldownBox ul li.selectedOption {background-color: #ddddff;}
